force-app/main/default/objects/Endoso__c/Endoso__c.object-meta.xml
<CustomObject>
    <label>Endososss</label>
    <nameField>
        <displayFormat>END - {00000}</displayFormat>
        <label>Número de endoso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Endosos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>