force-app/main/default/objects/Endoso__c/fields/C_digo_de_Ampliaci_n__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_Ampliaci_n__c</fullName>
    <label>Código de Ampliación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>