force-app/main/default/objects/Endoso__c/fields/Diferencia_prima__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_prima__c</fullName>
    <formula>Nueva_prima__c-Plan_de_pago__r.MontoTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diferencia prima</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>