force-app/main/default/objects/Endoso__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrador</fullName>
            </value>
            <value>
                <fullName>En revisión</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Aplicado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>