force-app/main/default/objects/Endoso__c/fields/Fecha_efectiva__c.field-meta.xml
<CustomField>
    <fullName>Fecha_efectiva__c</fullName>
    <label>Fecha efectiva</label>
    <type>Date</type>
</CustomField>