force-app/main/default/objects/Endoso__c/fields/Fin_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Fin_Contrato__c</fullName>
    <label>Fin Contrato</label>
    <type>Date</type>
</CustomField>