force-app/main/default/objects/Endoso__c/fields/Fin_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Fin_Vigencia__c</fullName>
    <label>Fin Vigencia</label>
    <type>Date</type>
</CustomField>