force-app/main/default/objects/Endoso__c/fields/Nueva_modalidad__c.field-meta.xml
<CustomField>
    <fullName>Nueva_modalidad__c</fullName>
    <label>Nueva modalidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semestral</fullName>
            </value>
            <value>
                <fullName>Quincenal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>