force-app/main/default/objects/Endoso__c/fields/Nueva_prima__c.field-meta.xml
<CustomField>
    <fullName>Nueva_prima__c</fullName>
    <label>Nueva prima</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>