force-app/main/default/objects/Endoso__c/fields/Seguro__c.field-meta.xml
<CustomField>
    <fullName>Seguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seguro</label>
    <referenceTo>Seguro__c</referenceTo>
    <relationshipName>Endosos</relationshipName>
    <type>Lookup</type>
</CustomField>