force-app/main/default/objects/Endoso__c/fields/Tipo_de_endoso__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_endoso__c</fullName>
    <label>Tipo de endoso</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modificación</fullName>
            </value>
            <value>
                <fullName>Cancelación</fullName>
            </value>
            <value>
                <fullName>Renovación</fullName>
            </value>
            <value>
                <fullName>Aumento de valor de contrato</fullName>
            </value>
            <value>
                <fullName>Dismiunción de valor de contrato</fullName>
            </value>
            <value>
                <fullName>Aumento de vigencia</fullName>
            </value>
            <value>
                <fullName>Financiero</fullName>
                <isActive>false</isActive>
                <label>Financiero</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>